Add tpp and fix some styles